--- a/weather.html
+++ b/weather.html
@@ -78,92 +78,108 @@
     </main>
 
     <div class="settings-modal" data-settings-modal>
-        <div class="settings-content card">
-            <h2 class="title-2">Settings</h2>
-            <form data-settings-form>
-                <div class="settings-sections">
-                    <div class="settings-section">
-                        <h3 class="settings-section-title">Temperature</h3>
-                        <select class="settings-select" name="temperature" data-settings-temp>
-                            <option value="celsius">Celsius (°C)</option>
-                            <option value="fahrenheit">Fahrenheit (°F)</option>
-                            <option value="kelvin">Kelvin (K)</option>
-                        </select>
-                        <p class="settings-description">
-                            Choose how temperature values are displayed throughout the app
-                        </p>
+    <div class="settings-content card">
+        <h2 class="title-2">Settings</h2>
+        <form data-settings-form>
+            <div class="settings-sections">
+                <div class="settings-section">
+                    <h3 class="settings-section-title">Appearance</h3>
+                    <div class="settings-options">
+                        <label class="setting-item">
+                            <span class="setting-label">Dark Mode</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" name="darkMode" data-dark-mode-toggle>
+                                <span class="toggle-slider"></span>
+                            </div>
+                        </label>
                     </div>
-
-                    <div class="settings-section">
-                        <h3 class="settings-section-title">Wind Speed</h3>
-                        <select class="settings-select" name="windSpeed" data-settings-speed>
-                            <option value="kmh">Kilometers per hour (km/h)</option>
-                            <option value="mph">Miles per hour (mph)</option>
-                            <option value="ms">Meters per second (m/s)</option>
-                            <option value="knots">Knots (kts)</option>
-                            <option value="beaufort">Beaufort scale (Bft)</option>
-                        </select>
-                        <p class="settings-description">
-                            Select your preferred unit for wind speed measurements
-                        </p>
-                    </div>
-
-                    <div class="settings-section">
-                        <h3 class="settings-section-title">Pressure</h3>
-                        <select class="settings-select" name="pressure" data-settings-pressure>
-                            <option value="hpa">Hectopascals (hPa)</option>
-                            <option value="inhg">Inches of Mercury (inHg)</option>
-                            <option value="mmhg">Millimeters of Mercury (mmHg)</option>
-                            <option value="mbar">Millibars (mbar)</option>
-                            <option value="kpa">Kilopascals (kPa)</option>
-                        </select>
-                        <p class="settings-description">
-                            Choose how atmospheric pressure is displayed
-                        </p>
-                    </div>
-
-                    <div class="settings-section">
-                        <h3 class="settings-section-title">Time Format</h3>
-                        <div class="settings-options">
-                            <label class="setting-item">
-                                <span class="setting-label">24-hour Time</span>
-                                <div class="toggle-switch">
-                                    <input type="checkbox" name="timeFormat" data-settings-time>
-                                    <span class="toggle-slider"></span>
-                                </div>
-                            </label>
-                        </div>
-                        <p class="settings-description">
-                            Toggle between 12-hour (1:00 PM) and 24-hour (13:00) format.
-                            Page refresh required after changing.
-                        </p>
-                    </div>
-
-                    <div class="settings-section">
-                        <h3 class="settings-section-title">Location Services</h3>
-                        <div class="settings-options">
-                            <label class="setting-item">
-                                <span class="setting-label">Enable Location</span>
-                                <div class="toggle-switch">
-                                    <input type="checkbox" name="location" data-settings-location>
-                                    <span class="toggle-slider"></span>
-                                </div>
-                            </label>
-                        </div>
-                        <p class="settings-description">
-                            Allow automatic location detection for local weather updates
-                        </p>
-                    </div>
+                    <p class="settings-description">
+                        Toggle between light and dark appearance
+                    </p>
                 </div>
 
-                <div class="settings-actions">
-                    <button type="submit" class="btn-primary settings-save" data-settings-save>
-                        <span class="span">Save Changes</span>
-                    </button>
-                    <button type="button" class="btn-secondary settings-close" data-settings-close>
-                        <span class="span">Cancel</span>
-                    </button>
+                <div class="settings-section">
+                    <h3 class="settings-section-title">Temperature</h3>
+                    <select class="settings-select" name="temperature" data-settings-temp>
+                        <option value="celsius">Celsius (°C)</option>
+                        <option value="fahrenheit">Fahrenheit (°F)</option>
+                        <option value="kelvin">Kelvin (K)</option>
+                    </select>
+                    <p class="settings-description">
+                        Choose how temperature values are displayed throughout the app
+                    </p>
                 </div>
+
+                <div class="settings-section">
+                    <h3 class="settings-section-title">Wind Speed</h3>
+                    <select class="settings-select" name="windSpeed" data-settings-speed>
+                        <option value="kmh">Kilometers per hour (km/h)</option>
+                        <option value="mph">Miles per hour (mph)</option>
+                        <option value="ms">Meters per second (m/s)</option>
+                        <option value="knots">Knots (kts)</option>
+                        <option value="beaufort">Beaufort scale (Bft)</option>
+                    </select>
+                    <p class="settings-description">
+                        Select your preferred unit for wind speed measurements
+                    </p>
+                </div>
+
+                <div class="settings-section">
+                    <h3 class="settings-section-title">Pressure</h3>
+                    <select class="settings-select" name="pressure" data-settings-pressure>
+                        <option value="hpa">Hectopascals (hPa)</option>
+                        <option value="inhg">Inches of Mercury (inHg)</option>
+                        <option value="mmhg">Millimeters of Mercury (mmHg)</option>
+                        <option value="mbar">Millibars (mbar)</option>
+                        <option value="kpa">Kilopascals (kPa)</option>
+                    </select>
+                    <p class="settings-description">
+                        Choose how atmospheric pressure is displayed
+                    </p>
+                </div>
+
+                <div class="settings-section">
+                    <h3 class="settings-section-title">Time Format</h3>
+                    <div class="settings-options">
+                        <label class="setting-item">
+                            <span class="setting-label">24-hour Time</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" name="timeFormat" data-settings-time>
+                                <span class="toggle-slider"></span>
+                            </div>
+                        </label>
+                    </div>
+                    <p class="settings-description">
+                        Toggle between 12-hour (1:00 PM) and 24-hour (13:00) format.
+                        Page refresh required after changing.
+                    </p>
+                </div>
+
+                <div class="settings-section">
+                    <h3 class="settings-section-title">Location Services</h3>
+                    <div class="settings-options">
+                        <label class="setting-item">
+                            <span class="setting-label">Enable Location</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" name="location" data-settings-location>
+                                <span class="toggle-slider"></span>
+                            </div>
+                        </label>
+                    </div>
+                    <p class="settings-description">
+                        Allow automatic location detection for local weather updates
+                    </p>
+                </div>
+            </div>
+
+            <div class="settings-actions">
+                <button type="submit" class="settings-save" data-settings-save>
+                    <span class="span">Save Changes</span>
+                </button>
+                <button type="button" class="settings-close" data-settings-close>
+                    <span class="span">Cancel</span>
+                </button>
+            </div>
         </form>
     </div>
 </div>
