--- a/weather.html
+++ b/weather.html
@@ -56,7 +56,7 @@
                     <span class="span">Home</span>
                 </button>
 
-                <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
+                <button class="#" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
                 </button>
             </div>
