--- a/weather.html
+++ b/weather.html
@@ -19,6 +19,17 @@
     <script type="module" src="assest/js/module.js"></script>
     <script type="module" src="assest/js/settings.js"></script>
 </head>
+
+     <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-E0RSQS1MS7');
+    </script>
+    
 <body>
     <header class="header">
         <div class="container">
