--- a/weather.html
+++ b/weather.html
@@ -86,7 +86,7 @@
             </div>
             <div class="loading" data-loading></div>
         </article>
-
+    <main>
     <div class="settings-modal" data-settings-modal>
     <div class="settings-content">
         <h2 class="title-2">Settings</h2>
