--- a/weather.html
+++ b/weather.html
@@ -38,55 +38,49 @@
             </a>
             <div class="search-view" data-search-view>
                 <div class="search-wrapper">
-                    <input type="search"
-                               name="search"
-                               class="search-field"
-                               placeholder="Search city..."
-                               autocomplete="off"
-                               data-search-field>
-                    <span class="m-icon">search</span>
+                    <input type="search" name="search" class="search-field" placeholder="search city ..." autocomplete="off" data-search-field>
+                    <span class="m-icon leading-icon">search</span>
                     <button class="icon-btn leading-icon has-state" aria-label="close search" data-search-toggler>
                         <span class="m-icon">arrow_back</span>
                     </button>
-                </div>
-                <div class="search-result" data-search-result></div>
-            </div>
-            <div class="header-actions">
-                <a href="#/current-location" class="btn-primary has-state" data-current-location-btn>
-                    <span class="m-icon">my_location</span>
-                    <span class="span">Current Location</span>
-                </a>
-
-                <button class="btn-primary has-state" data-settings-btn>
-                    <span class="m-icon">settings</span>
-                    <span class="span">Settings</span>
-                </button>
-
-                <button class="btn-primary has-state" data-settings-btn onclick="window.location.href='index.html';">
+                    
+                    <button class="btn-primary has-state" data-settings-btn onclick="window.location.href='index.html';">
                     <span class="m-icon material-icons">home</span>
                     <span class="span">Home</span>
                 </button>
 
+                </div>
+                <div class="search-result" data-search-result>
+                </div>
+            </div>
+            <div class="header-actions">
                 <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
                 </button>
+                <a href="#/current-location" class="btn-primary has-state" data-current-location-btn>
+                    <span class="m-icon">my_location</span>
+                    <span class="span">Current Location</span>
+                </a>
             </div>
         </div>
     </header>
-
     <main>
         <article class="container" data-container>
             <div class="content-left">
+                <!-- current weater -->
                 <section class="section current-weather" aria-label="current weather" data-current-weather></section>
+                <!-- forecast -->
                 <section class="section forecast" aria-labelledby="forecast-label" data-5-day-forecast></section>
             </div>
             <div class="content-right">
-                <section class="section highlights" aria-labelledby="highlights-label" data-highlights></section>
+                <!-- highlight -->
+                <section class="section highlights" aria-labelledby="highlights-lable" data-highlights></section>
                 <section class="section hourly-forecast" aria-label="hourly forecast" data-hourly-forecast></section>
             </div>
-            <div class="loading" data-loading></div>
+            <div class="loading" data-loading>
+            </div>
         </article>
-    <main>
+    </main>
     <div class="settings-modal" data-settings-modal>
     <div class="settings-content">
         <h2 class="title-2">Settings</h2>
