--- a/index.html
+++ b/index.html
@@ -126,10 +126,6 @@ s0.parentNode.insertBefore(s1,s0);
             <i class="fab fa-tiktok social-icon"></i>
             <span>TikTok</span>
         </a>
-        <a href="https://www.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fab fa-youtube social-icon"></i>
-            <span>YouTube</span>
-        </a>
         <a href="https://www.snapchat.com/add/calebkritzar" class="social-button">
             <i class="fab fa-snapchat-ghost social-icon"></i>
             <span>Snapchat</span>
@@ -161,10 +157,6 @@ s0.parentNode.insertBefore(s1,s0);
         <a href="https://www.instagram.com/busarmydude/" class="social-button">
             <i class="fab fa-instagram social-icon"></i>
             <span>Instagram</span>
-        </a>
-        <a href="https://music.youtube.com/@BusArmyDude" class="social-button">
-            <i class="fab fa-square-youtube social-icon"></i>
-            <span>YouTube Music</span>
         </a>
     </div>
 </div>
@@ -359,10 +351,24 @@ s0.parentNode.insertBefore(s1,s0);
                 <p>Also Own (Currently Not Installed):</p>
                 <ul>
                     <li>American Truck Simulator</li>
+                    <li>Ark: Survival Evolved (Not Supported on macos only windows)</li>
+                    <li>BeamNG.drive (Not Supported on macos only windows)</li>
+                    <li>Car Mechanic Simulator 2015 (Not Supported on macos only windows)</li>
                     <li>Car Mechanic Simulator 2018</li>
-                    <li>Ark: Survival of the Fittest</li>
+                    <li>Car Mechanic Simulator 2021 (Not Supported on macos only windows)</li>
                     <li>Cities: Skylines</li>
+                    <li>Cities: Skylines II (Not Supported on macos only windows)</li>
+                    <li>Fast Food Simulator: Prologue (Not Supported on macos only windows)</li>
+                    <li>Garry's Mod (Not Supported on macos)</li>
+                    <li>Grand Theft Auto V Enhanced (Not Supported on macos only windows)</li>
+                    <li>Grand Theft Auto V Legacy (Not Supported on macos only windows)</li>
+                    <li>House Flipper 2 (Not Supported on macos only windows)</li>
+                    <li>Microsoft Flight Simulator (Not Supported on macos only windows)</li>
+                    <li>MyDockFinder (Not a game not supported on macos only windows)</li>
+                    <li>Neverwinter (Not Supported on macos only windows)</li>
                     <li>Planet Coaster</li>
+                    <li>The Sims 4 (Not Supported on Steam)</li>
+                    <li>Supermarket Simulator (Not Supported on macos only windows)</li>
                     <li>X-Plane 11</li>
                     <li>X-Plane 12</li>
                 </ul>
@@ -462,12 +468,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (44.1%)</li>
-                            <li>CSS (35.6%)</li>
-                            <li>HTML (20.3%)</li>
+                            <li>JavaScript (43.3%)</li>
+                            <li>CSS (37.7%)</li>
+                            <li>HTML (19.0%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: March 29th, 2025 11:46:00 AM EST</li>
+                    <li>Last Updated: April 1, 2025 10:09:43 AM EST</li>
                 </ul>
             </div>
         </div>
@@ -617,7 +623,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="battery-percentage">99%</div>
             </div>
         </div>
-        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 212</div>
+        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 216</div>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
