--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ s0.parentNode.insertBefore(s1,s0);
 <div class="social-links-section">
     <h2>Connect with Me</h2>
     <div class="social-links-container">
-        <a href="https://www.tiktok.com/@officalbusarmydude" class="social-button">
+        <a href="https://www.tiktok.com/@bus.army.dude" class="social-button">
             <i class="fab fa-tiktok social-icon"></i>
             <span>TikTok</span>
         </a>
