--- a/index.html
+++ b/index.html
@@ -305,6 +305,11 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
 
     <p class="status"><strong>Status:</strong> <span id="open-status"></span></p>
+
+    <!-- Temporarily Unavailable Message -->
+    <div class="unavailable-container" id="unavailable-message" style="display: none;">
+        <p>Temporarily Unavailable. Please check back later.</p>
+    </div>
 </div>
         
         <div class="faq-section">
