--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ s0.parentNode.insertBefore(s1,s0);
 
     <!-- Temporarily Unavailable Message -->
     <div id="temporary-alert" style="display: none;">
-        <p><strong>Temporarily Unavailable:</strong> <span id="temporary-reason"></span></p>
+        <p><strong>Temporarily Unavailable:</strong></p>
         <p><strong>Unavailable Time:</strong> <span id="temporary-hours"></span></p>
     </div>
 </div>
