--- a/weather.html
+++ b/weather.html
@@ -44,7 +44,7 @@
                                    autocomplete="off"
                                    data-search-field>
                     <span class="m-icon">search</span>
-                    <button class="icon-btn leading-icon has-state" aria-label="close search" data-search-toggler>
+                    <button class="icon-btn has-state" aria-label="close search" data-search-toggler>
                         <span class="m-icon">arrow_back</span>
                     </button>
                 </div>
