--- a/weather.html
+++ b/weather.html
@@ -179,4 +179,5 @@
     <script src="script.js"></script>
     <script src="ai-features.js"></script>
     <script src="settings.js"></script>
+    <script src="copyright.js"></script>
 </html>
