--- a/index.html
+++ b/index.html
@@ -475,12 +475,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (43.3%)</li>
-                            <li>CSS (37.7%)</li>
-                            <li>HTML (19.0%)</li>
+                            <li>JavaScript (43.4%)</li>
+                            <li>CSS (37.4%)</li>
+                            <li>HTML (19.2%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: April 1, 2025 10:09:43 AM EST</li>
+                    <li>Last Updated: April 2, 2025 10:49:43 AM EST</li>
                 </ul>
             </div>
         </div>
@@ -622,7 +622,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $1,067.49</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> September 20, 2024</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> November 08, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.4 (22E240)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.5 (22F5042g)</div>
         <div class="tech-detail"><i class="fas fa-heart"></i><span>Battery Health:</span></div>
         <div class="battery-container">
             <div class="battery-icon">
@@ -630,7 +630,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="battery-percentage">99%</div>
             </div>
         </div>
-        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 216</div>
+        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 220</div>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -644,7 +644,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $853.98</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> September 22, 2023</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> May 17, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> WatchOS 11.4 (22T250)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> WatchOS 11.5 (22T5542f)</div>
         <div class="tech-detail"><i class="fas fa-heart"></i><span>Battery Health:</span></div>
         <div class="battery-container">
             <div class="battery-icon">
@@ -664,7 +664,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $742.29</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> January 17, 2023</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> May 16, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.4 (24E247)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.5 (24F5042g)</div>
     </div>
 </div>
 
