--- a/blog-post.html
+++ b/blog-post.html
@@ -32,6 +32,12 @@
                 <option value="past-year">Past Year</option>
             </select>
         </div>
+
+        <div class="home-button-container" style="text-align: center; padding: 15px 20px; background: var(--content-bg); border-bottom: 1px solid var(--border-color);">
+            <button onclick="window.location.href='index.html'" style="padding: 10px 20px; font-size: 1rem; cursor: pointer; border: 1px solid var(--border-color); border-radius: 8px; background: var(--button-bg, #eee); color: var(--button-text, #333);">
+                Back to Home
+            </button>
+        </div>
     </header>
 
     <main>
