--- a/index.html
+++ b/index.html
@@ -96,26 +96,28 @@ s0.parentNode.insertBefore(s1,s0);
 </div>
 
   <div class="profile-section">
-    <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
+    <button class="merch-button" aria-label="Merch" onclick="window.location.href='https://bus-army-dude.github.io/bus-army-dude/merchandise.html'"></button>
 
-    <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
+    <button class="settings-button" aria-label="Settings" onclick="window.location.href='settings.html'"></button>
 
-    <div class="profile-pic-wrapper">
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+    <div class="profile-pic-wrapper">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
 
-        <div class="profile-status-container">
-            <span class="profile-status">🟢</span>
-        </div>
-    </div>
+        <div class="profile-status-container">
+            <span class="profile-status">🟢</span>
+        </div>
+    </div>
 
-    <div class="username-checkmark">
-        <h1>Bus Army Dude</h1>
-        <img src="check.png" alt="Verified" class="verified">
-    </div>
-    <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
-    <p>POLITICAL PARTY: Republican</p>
+    <div class="username-checkmark">
+        <h1>Bus Army Dude</h1>
+        <img src="check.png" alt="Verified" class="verified">
+    </div>
+    <p>CURRENT PRESIDENT: Trump (2025-2029)</p>
+    <p>POLITICAL PARTY: Republican</p>
 
-    <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
+    <button class="weather-button" aria-label="Weather" onclick="window.location.href='weather.html'"></button>
+
+    <button class="blog-button" aria-label="Blog" onclick="window.location.href='blog-post.html'"></button>
 </div>
         
        <!-- Social Links Section -->
