--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
         </div>
         
-        <!-- Useful Links Section -->
-    <div class="useful-links-section section">
+        <div class="useful-links-section section">
         <h2 class="section-title">Useful Links</h2>
         <div class="links-container">
             <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank" class="link-button">Merch Store (Fourthwall)</a>
@@ -219,6 +218,7 @@ s0.parentNode.insertBefore(s1,s0);
             <a href="https://bus-army-dude.instatus.com/" target="_blank" class="link-button">Bus Army Dude's Website Status Page</a>
             <a href="https://busarmydude.tawk.help/" target="_blank" class="link-button">Bus Army Dude's Knowledge Portal</a>
             <a href="https://rkritzar52.github.io/riversportfolio/" target="_blank" class="link-button">River's Portfolio</a>
+            <a href="blog-post.html" target="_blank" class="link-button">Bus Army Dude's Blog</a>
         </div>
     </div>
 
