--- a/blog-post.html
+++ b/blog-post.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - News & Articles</title>
+    <title>Blog - Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Meta tag to refresh the page every 300 seconds -->
+    <meta http-equiv="refresh" content="300">
 </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-E0RSQS1MS7');
+    </script>
+
+    <!-- Favicons and Icons -->
+<link rel="icon" type="image/png" sizes="192x192" href="images/android-icon-192x192.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png" />
+
+<!-- Web App Manifest -->
+<link rel="manifest" href="/manifest.json" />
+
+<!-- Microsoft-specific configuration -->
+<meta name="msapplication-TileColor" content="#ffffff" />
+<meta name="msapplication-TileImage" content="images/ms-icon-144x144.png" />
+<meta name="theme-color" content="#ffffff"/>
+
+<!-- Apple Touch Icons -->
+<!-- Light mode icon -->
+<link rel="apple-touch-icon" media="(prefers-color-scheme: light)" href="/assets/light-icon/180.png">
+
+<!-- Dark mode icon -->
+<link rel="apple-touch-icon" media="(prefers-color-scheme: dark)" href="/assets/dark-icon/180.png">
+
+<!-- Default (fallback) icon -->
+<link rel="apple-touch-icon" href="/assets/light-icon/180.png">
+
+<!-- Additional sizes for better compatibility -->
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/light-icon/120.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/light-icon/152.png">
+<link rel="apple-touch-icon" sizes="512x512" href="/assets/light-icon/512.png">
+
+<!-- Microsoft-specific configuration -->
+<meta name="browserconfig" content="/browserconfig.xml">
 <body>
     <header>
         <nav>
