--- a/blog-post.html
+++ b/blog-post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Bus Army Dude's Profile</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="blog-styles.css">
     <meta http-equiv="refresh" content="300">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0RSQS1MS7"></script>
     <script>
